@@ -438,7 +438,16 @@ Continue       :c       switch off single step mode, continue evaluation
                    &aux
                    (may-continue
                     (or continuable
-                        (and condition (find-restart 'CONTINUE condition))))
+                        (and condition
+                             (let ((restart
+                                     (find-restart 'CONTINUE condition)))
+                               (and restart
+                                    ;; Ignore the CONTINUE restart if it comes
+                                    ;; from ASSERT with no places, because it
+                                    ;; leads to user frustration.
+                                    (not (eq (restart-interactive restart)
+                                             #'assert-restart-no-prompts))
+                                    restart)))))
                    (interactive-p (interactive-stream-p *debug-io*))
                    (commandsr '()))
   (when (and print-it (typep condition (clos:find-class 'condition)))
