@@ -1,3 +1,8 @@
+2004-10-27  Bruno Haible  <bruno@clisp.org>
+
+	* conditions.tst: Check that after a Ctrl-D (EOF), assert without
+	places is not retried.
+
 2004-10-26  Bruno Haible  <bruno@clisp.org>
 
 	* clos.tst: Add test against multiple execution of initialize-instance.
